side scrollbar updated

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,20 @@
      transform: rotate(360deg);
     }
  }
+
+ /*---------- Side Scrollbar ----------*/
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #5DA93C;
+  border-radius: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+  background: #d4d4d8;
+}
